# mlperf-automations

./: .gitignore  .mailmap  404.html  AGENTS.md  CLAUDE.md  COPYRIGHT.txt  MANIFEST.in  README.md  flow.md  ids.json  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  summary.xlsx  summary_results.json  update_readme_and_commit.sh  verify_accuracy.txt  verify_performance.txt
.claude/: skill.md
.github/: pull_request_template.md
.github/scripts/: list_modified_files.py  list_modified_scripts_with_secrets.py
.github/workflows/: auto-update-dev.yml  build_wheel.yml  build_wheel_off.yml  cla.yml  document-scripts.yml  format.yml  reassign-pr-commits.yml  run-tests-on-modified-meta.yml  test-amd-mlperf-inference-implementations.yml  test-cm-based-submission-generation.yml  test-docker-images.yml  test-image-classification-onnx.yml  test-mlc-based-submission-generation.yml  test-mlc-script-features.yml  test-mlc-script-pip.yml  test-mlcscripts-wheel.yml  test-mlperf-automotive-submission-generation.yml  test-mlperf-automotive.yml  test-mlperf-inference-abtf-poc.yml  test-mlperf-inference-bert-deepsparse-tf-onnxruntime-pytorch.yml  test-mlperf-inference-gptj.yml  test-mlperf-inference-llama2.yml  test-mlperf-inference-mixtral.yml  test-mlperf-inference-mlcommons-cpp-resnet50.yml  test-mlperf-inference-resnet50-closed-division.yml  test-mlperf-inference-resnet50.yml  test-mlperf-inference-retinanet.yml  test-mlperf-inference-rgat.yml  test-mlperf-inference-sdxl.yaml  test-mlperf-inference-submission-generation.yml  test-mlperf-inference-whisper.yml  test-mlperf-inference-yolo-closed-div.yml  test-mlperf-inference-yolo-open-div.yml  test-mlperf-inference-yolo.yml  test-mlperf-loadgen-onnx-huggingface-bert-fp32-squad.yml  test-nvidia-mlperf-inference-implementations.yml  test-remote-run.yml  test-scc24-sdxl.yaml
automation/: utils.py
automation/script/: README.md  apptainer.py  cache_utils.py  doc.py  docker.py  docker_utils.py  experiment.py  help.py  lint.py  meta_schema.py  module.py  module_misc.py  remote_run.py  script_utils.py  validate.py
cm-yaml-guide/: index.html
docs/: getting-started.md  migration.md
getting-started/: index.html
mlc_scripts/: __init__.py
mlc_scripts.egg-info/: PKG-INFO
mlc_scripts/script/: create_category_folders.py  system_desc.json
script/: .gitignore  README.md  create_category_folders.py  generate_readme.py
script/activate-python-venv/: meta.yaml
script/add-custom-nvidia-system/: README.md  customize.py  dummy_config.py  meta.yaml  run.sh
script/app-cloverleaf/: README.md  customize.py  meta.yaml  run.sh
script/app-cp2k/: README.md  customize.py  meta.yaml  run.sh
script/app-gromacs/: README.md  customize.py  meta.yaml  run.sh
script/app-hmmer/: README.md  customize.py  meta.yaml  run.sh
script/app-image-classification-onnx-py/: COPYRIGHT.md  customize.py  meta.yaml
script/app-image-classification-torch-py/: README.md
script/app-image-classification-tvm-onnx-py/: README.md  meta.yaml
script/app-image-corner-detection/: README.md  customize.py
script/app-lammps/: customize.py  meta.yaml
script/app-loadgen-generic-python/: meta.yaml
scripts/: index.html
search/: search_index.json
tests/: test_repo_update_handling.py
(+1930 files in other folders)
