[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlc-scripts"
dynamic = ["version"]
description = "Automation scripts for running ML applications using MLC interface"
authors = [
    { name = "MLCommons", email = "systems@mlcommons.org" }
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["mlc", "mlcscripts", "mlcflow", "pypi", "package", "automation", "mlperf", "mlcr"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "pyyaml",
    "mlcflow>=2.0.0,<3",
    "giturlparse"
]

[project.urls]
Homepage = "https://github.com/mlcommons/mlperf-automations"
Documentation = "https://docs.mlcommons.org/mlperf-automations"
Repository = "https://github.com/mlcommons/mlperf-automations"
Issues = "https://github.com/mlcommons/mlperf-automations/issues"

[tool.setuptools]
packages = ["mlc_scripts"]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
# Bundle the entire script/ tree (meta.yaml, customize.py, run.sh, README.md,
# tests/, etc.) as read-only package data so `import mlc_scripts` exposes all
# ~378 scripts via mlc_scripts.SCRIPTS_DIR after a plain `pip install`.
"mlc_scripts" = ["script/**/*"]
