[build-system]
requires = ["setuptools>=61.0", "wheel", "toml", "mlcflow"]
build-backend = "setuptools.build_meta"

[project]
name = "mlc-scripts"
dynamic = ["version"]
description = "Automation scripts for running ML applications using MLC interface"
authors = [
    { name = "MLCommons", email = "systems@mlcommons.org" }
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["mlc", "mlcscripts", "mlcflow", "pypi", "package", "automation", "mlperf", "mlcr"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "pyyaml",
    "mlcflow",
    "giturlparse"
]

[project.urls]
Homepage = "https://github.com/mlcommons/mlperf-automations"
Documentation = "https://docs.mlcommons.org/mlperf-automations"
Repository = "https://github.com/mlcommons/mlperf-automations"
Issues = "https://github.com/mlcommons/mlperf-automations/issues"

# Phase-1 prototype: advertises a small demo script-content package to
# mlcflow's pip-package discovery mechanism (see
# mlcflow-pip-script-packages-proposal.pptx). NOT the real 377-script
# tree - that migration is a separate, later phase. mlc_scripts_content/
# is a new, minimal package distinct from automation/ (left untouched).
[project.entry-points."mlc.script_packages"]
mlc-scripts = "mlc_scripts_content"

[tool.setuptools]
packages = ["mlc_scripts_content"]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
"mlcr" = ["README.md", "VERSION", "git_commit_hash.txt"]
"mlc_scripts_content" = ["script/**/*"]
